Añadir registro de usuarios: Host: 01. UserController con POST de user. 02. Middleware para controlar http code 500 03. ResultExtensions para controlar http codes 200, 201 y 400 04. Añadido JwtSettings al appsettings. Application: 01. Feature CreateUser. 02. UserService con funcionalidad RegisterUser. 03. PasswordService con funcionalidades para encriptar y verificar. 04. TokenService con funcionalidades de crear AccessToken y RefreshToken. 05. Dtos AuthResponse y RefreshToken para respuesta. 06. DI y JwtOptions. Infrastructure: 01. AuthDBSeeder añadido para crear usuarios y roles predefinidos. 02. Registro de nuevo servicio Seeder. 03. Nuevos métodos en repositorios. Domain: 01. Nuevo value object username. 02. Cambio en token para persistir cadena de refresktoken. Tests unitarios.

--- a/AuthService.Host/appsettings.json
+++ b/AuthService.Host/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost\\SQLEXPRESS;Database=authservice;Trusted_Connection=True;TrustServerCertificate=True;"
+    "SqlServer": ""
+  },
+  "JwtSettings": {
+    "Issuer": "",
+    "Audience": "",
+    "SecretKey": ""
   }
 }
